[gd_scene load_steps=69 format=2]

[ext_resource path="res://Wheel1.gd" type="Script" id=1]
[ext_resource path="res://wheel/0000.png" type="Texture" id=2]
[ext_resource path="res://wheel/0005.png" type="Texture" id=3]
[ext_resource path="res://wheel/0001.png" type="Texture" id=4]
[ext_resource path="res://wheel/0003.png" type="Texture" id=5]
[ext_resource path="res://wheel/0002.png" type="Texture" id=6]
[ext_resource path="res://wheel/0004.png" type="Texture" id=7]
[ext_resource path="res://wheel/0021.png" type="Texture" id=8]
[ext_resource path="res://wheel/0022.png" type="Texture" id=9]
[ext_resource path="res://wheel/0012.png" type="Texture" id=10]
[ext_resource path="res://wheel/0018.png" type="Texture" id=11]
[ext_resource path="res://wheel/0013.png" type="Texture" id=12]
[ext_resource path="res://wheel/0016.png" type="Texture" id=13]
[ext_resource path="res://wheel/0008.png" type="Texture" id=14]
[ext_resource path="res://wheel/0009.png" type="Texture" id=15]
[ext_resource path="res://wheel/0010.png" type="Texture" id=16]
[ext_resource path="res://wheel/0011.png" type="Texture" id=17]
[ext_resource path="res://wheel/0014.png" type="Texture" id=18]
[ext_resource path="res://wheel/0015.png" type="Texture" id=19]
[ext_resource path="res://wheel/0006.png" type="Texture" id=20]
[ext_resource path="res://wheel/0017.png" type="Texture" id=21]
[ext_resource path="res://wheel/0019.png" type="Texture" id=22]
[ext_resource path="res://wheel/0020.png" type="Texture" id=23]
[ext_resource path="res://wheel/0007.png" type="Texture" id=24]
[ext_resource path="res://wheel/0030.png" type="Texture" id=25]
[ext_resource path="res://wheel/0023.png" type="Texture" id=26]
[ext_resource path="res://wheel/0024.png" type="Texture" id=27]
[ext_resource path="res://wheel/0025.png" type="Texture" id=28]
[ext_resource path="res://wheel/0026.png" type="Texture" id=29]
[ext_resource path="res://wheel/0028.png" type="Texture" id=30]
[ext_resource path="res://wheel/0029.png" type="Texture" id=31]
[ext_resource path="res://wheel/0027.png" type="Texture" id=32]
[ext_resource path="res://Lever.gd" type="Script" id=33]
[ext_resource path="res://lever/0005.png" type="Texture" id=34]
[ext_resource path="res://lever/0002.png" type="Texture" id=35]
[ext_resource path="res://lever/0003.png" type="Texture" id=36]
[ext_resource path="res://lever/0004.png" type="Texture" id=37]
[ext_resource path="res://lever/0006.png" type="Texture" id=38]
[ext_resource path="res://lever/0000.png" type="Texture" id=39]
[ext_resource path="res://lever/0001.png" type="Texture" id=40]
[ext_resource path="res://lever/0019.png" type="Texture" id=41]
[ext_resource path="res://lever/0020.png" type="Texture" id=42]
[ext_resource path="res://lever/0022.png" type="Texture" id=43]
[ext_resource path="res://lever/0016.png" type="Texture" id=44]
[ext_resource path="res://lever/0010.png" type="Texture" id=45]
[ext_resource path="res://lever/0021.png" type="Texture" id=46]
[ext_resource path="res://lever/0009.png" type="Texture" id=47]
[ext_resource path="res://lever/0012.png" type="Texture" id=48]
[ext_resource path="res://lever/0023.png" type="Texture" id=49]
[ext_resource path="res://lever/0007.png" type="Texture" id=50]
[ext_resource path="res://lever/0008.png" type="Texture" id=51]
[ext_resource path="res://lever/0018.png" type="Texture" id=52]
[ext_resource path="res://lever/0015.png" type="Texture" id=53]
[ext_resource path="res://lever/0011.png" type="Texture" id=54]
[ext_resource path="res://lever/0017.png" type="Texture" id=55]
[ext_resource path="res://lever/0014.png" type="Texture" id=56]
[ext_resource path="res://lever/0013.png" type="Texture" id=57]
[ext_resource path="res://lever/0026.png" type="Texture" id=58]
[ext_resource path="res://lever/0025.png" type="Texture" id=59]
[ext_resource path="res://lever/0029.png" type="Texture" id=60]
[ext_resource path="res://lever/0028.png" type="Texture" id=61]
[ext_resource path="res://lever/0030.png" type="Texture" id=62]
[ext_resource path="res://lever/0027.png" type="Texture" id=63]
[ext_resource path="res://lever/0024.png" type="Texture" id=64]
[ext_resource path="res://slider.gd" type="Script" id=65]
[ext_resource path="res://SlotMachine.gd" type="Script" id=66]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 38 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 57 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 44 ), ExtResource( 55 ), ExtResource( 52 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 49 ), ExtResource( 64 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 63 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 62 ) ],
"loop": false,
"name": "lever",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 25 ) ],
"loop": true,
"name": "wheel1",
"speed": 15.0
} ]

[node name="SlotMachine" type="Node2D"]
script = ExtResource( 66 )

[node name="Lever" type="AnimatedSprite" parent="."]
position = Vector2( 880, 141 )
frames = SubResource( 2 )
animation = "lever"
script = ExtResource( 33 )

[node name="slider" type="VSlider" parent="Lever"]
show_behind_parent = true
margin_left = -66.0
margin_top = -113.0
margin_right = 56.0
margin_bottom = 94.0
max_value = 30.0
value = 30.0
scrollable = false
script = ExtResource( 65 )

[node name="Wheel1" type="AnimatedSprite" parent="Lever"]
position = Vector2( -718, 157 )
frames = SubResource( 1 )
animation = "wheel1"
script = ExtResource( 1 )

[node name="TestButton" type="Button" parent="."]
margin_left = 351.0
margin_top = 272.0
margin_right = 503.0
margin_bottom = 338.0
text = "SPIN!"

[connection signal="animation_finished" from="Lever" to="Lever" method="_on_Lever_animation_finished"]
[connection signal="drag_ended" from="Lever/slider" to="Lever" method="_on_slider_drag_ended"]
[connection signal="drag_started" from="Lever/slider" to="Lever" method="_on_slider_drag_started"]
[connection signal="value_changed" from="Lever/slider" to="Lever" method="_on_VSlider_value_changed"]
[connection signal="pressed" from="TestButton" to="Lever/Wheel1" method="_on_TestButton_pressed"]
